--- a/css/index.css
+++ b/css/index.css
@@ -140,3 +140,9 @@ button[disabled=disabled], button:disabled {
 #mensagens-erro{
 	color: red;
 }
+
+.fadeOut{
+	background-color: yellow;
+	opacity: 0;
+	transition: 1s;
+}
