--- a/css/index.css
+++ b/css/index.css
@@ -146,3 +146,11 @@ button[disabled=disabled], button:disabled {
 	opacity: 0;
 	transition: 1s;
 }
+#filtrar-tabela{
+	width: 200px;
+	height: 35px;
+	margin-bottom: 10px;
+}
+.invisivel{
+	display: none;
+}
